test/langtools/tools/javac/valhalla/values/CheckClone.out
CheckClone.java:11:15: compiler.err.value.does.not.support: clone
CheckClone.java:14:5: compiler.err.method.does.not.override.superclass
2 errors
